--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
         }
     ],
     "require": {
-        "php": "^7.2.5",
-        "illuminate/support": "^7.0",
-        "illuminate/filesystem": "^7.0",
+        "php": "^7.2.5|^7.3|^7.4",
+        "illuminate/support": "^7.0|^8.0",
+        "illuminate/filesystem": "^7.0|^8.0",
         "doctrine/annotations": "~1.2",
         "phpdocumentor/reflection-docblock": "^3.1 || ^4.1 || ^5"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "~2.0",
-        "phpunit/phpunit": "^6.5"
+        "phpunit/phpunit": "^6.5|^8.5|^9.0"
     },
     "autoload": {
         "psr-4": {
